# bad-ideas-game

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD
content/assets/: walking.yml
content/assets/menus/: buttons.yml
content/assets/tilesets/: test.yml
content/cards/: card.yml  cardatlas.yml  cardpack.yml  cardrarity.yml
content/scenes/: scene1.scene  scene1.yml
dependencies/glad/: gl.h
src/: main.cpp
src/core/: game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  logger.cpp  logger.hpp  resourcemanager.cpp  resourcemanager.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  spriterenderer.cpp  spriterenderer.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  window.cpp  window.hpp
src/core/renderer/: animatedsprite.cpp  animatedsprite.hpp  shader.cpp  shader.hpp  sprite.cpp  spriterenderer.cpp  spriterenderer.hpp  staticsprite.cpp  staticsprite.hpp  textureatlas.cpp  textureatlas.hpp
src/game/: player.cpp  player.hpp  world.cpp  world.hpp
src/game/card/: card.hpp  cardloading.cpp  cardloading.hpp  cardpack.hpp
src/native/: glglfw.h
src/shaders/: fragment.glsl
